--- a/conda-env.yml
+++ b/conda-env.yml
@@ -8,6 +8,7 @@ dependencies:
     - numpy
     - transformers
     - datasets
+    - seaborn
     - pyspark==3.1.2
     - spark-nlp==3.4.4
   - conda:
