--- a/app/backend/Dockerfile
+++ b/app/backend/Dockerfile
@@ -6,3 +6,4 @@ COPY requirements.txt ./
 RUN pip install -r requirements.txt
 WORKDIR /app
 COPY . .
+CMD ["uvicorn", "main:app", "--reload", "--workers", "1", "--host", "0.0.0.0", "--port", "80"]
